--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "web-vitals": "^1.1.1",
+    "firebase": "^6.2.4",
+    "node-sass": "^4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
