- Adding our React hooks (useState, useEffect)  - Adding our function helpers

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1",
     "firebase": "^6.2.4",
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "moment": "^2.24.0"
   },
   "scripts": {
     "start": "react-scripts start",
